--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.tutorialmod.sapphire": "Sapphire",
   "item.tutorialmod.raw_sapphire": "Raw Sapphire",
 
+  "item.tutorialmod.metal_detector": "Metal Detector",
+
   "block.tutorialmod.sapphire_block": "Block of Sapphire",
   "block.tutorialmod.raw_sapphire_block": "Block of Raw Sapphire",
 
@@ -9,6 +11,9 @@
   "block.tutorialmod.deepslate_sapphrie_ore": "Deepslate Sapphire Ore",
   "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore",
   "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
+
+  "block.tutorialmod.sound_block": "Sound Block",
+
 
   "creativetab.tutorial_tab": "Sapphire Tutorial Tab",
 
